infra/k8s/comparison-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: comparison-clusterip-srv
spec:
  selector:
    app: comparison
  ports:
    - name: comparison
      protocol: TCP
      port: 3002
      targetPort: 3002
