infra/k8s/comparison-node-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: comparison-srv
spec:
  type: NodePort
  selector:
    app: comparison
  ports:
    - name: comparison
      protocol: TCP
      port: 3002
      targetPort: 3002
