infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: auth.com
      http:
        paths:
          - path: /auth
            backend:
              serviceName: auth-clusterip-srv
              servicePort: 3001
          - path: /authtest
            backend:
              serviceName: auth-clusterip-srv
              servicePort: 3001
          - path: /comparison
            backend:
              serviceName: comparison-clusterip-srv
              servicePort: 3002
          - path: /?(.*)
            backend:
              serviceName: client-clusterip-srv
              servicePort: 3000
